tests/suite/snapshots/suite__parse__tests__parse__group_of_anonymous08_01_4.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/group_of_anonymous08_01_4.xi:2:5]
   │
 2 │     x:int[3] = {1, 2, 3} // Will fail because can't initialize indexed array
   ·     ────┬───  
   ·         ╰───── Unexpected length in array type
───╯

